# Agim

./: .clang-format  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRODUCTION_READINESS.md  README.md  ROADMAP.md  SECURITY.md  test_hang.im  test_minimal  test_minimal.c
.cache/clangd/index/: aes_big_cbcdec.c.146F1F51D0DCD362.idx  aes_big_cbcenc.c.D3118ABDA1871FCB.idx  aes_big_ctr.c.229D6489C84BFB71.idx  aes_big_ctrcbc.c.CB97E023736766A0.idx  aes_big_dec.c.BCDE1B23AECD8725.idx  aes_big_enc.c.D8A03497B24F775D.idx  aes_common.c.EF2B3CD45256BF75.idx  (+420 more)
.github/workflows/: ci.yml  coverage.yml  fuzz.yml  sanitizers.yml  static-analysis.yml
bench/: benchmark.c  gc_bench.c  io_bench.c  mailbox_bench.c  parallel_bench.c  regbench.c  ring_bench.c  skynet_bench.c  spawn_bench.c
build-asan/: agim  agim_bench  agim_gc_bench  agim_mailbox_bench  agim_parallel  agim_regbench  agim_spawn_bench  test_array_operations  test_array_properties  test_block  test_block_capabilities  test_block_lifecycle  test_block_linking  test_block_messaging  test_block_monitoring  test_buffer_overflow  test_bytecode  test_bytecode_validation  test_capabilities  test_closure_operations  test_compiler  test_cow  test_e2e_checkpoint  test_e2e_distributed  test_e2e_echo_server  test_e2e_hotreload  test_e2e_lifecycle  test_e2e_messaging  test_e2e_pipeline  test_e2e_pubsub  test_e2e_scheduler  test_e2e_state_machine  test_e2e_supervision  test_e2e_timer  test_e2e_worker_pool  test_features  test_file_operations  test_gc  test_gc_allocation  test_gc_comprehensive  (+56 more)
build-tsan/: agim  agim_bench  agim_gc_bench  agim_mailbox_bench  agim_parallel  agim_regbench  agim_ring_bench  agim_skynet_bench  agim_spawn_bench  test_array_operations  test_array_properties  test_block  test_block_capabilities  test_block_lifecycle  test_block_linking  test_block_messaging  test_block_monitoring  test_buffer_overflow  test_bytecode  test_bytecode_validation  test_capabilities  test_closure_operations  test_compiler  test_cow  test_e2e_checkpoint  test_e2e_distributed  test_e2e_echo_server  test_e2e_hotreload  test_e2e_lifecycle  test_e2e_messaging  test_e2e_pipeline  test_e2e_pubsub  test_e2e_scheduler  test_e2e_state_machine  test_e2e_supervision  test_e2e_timer  test_e2e_worker_pool  test_features  test_file_operations  test_gc  (+58 more)
cmd/: agim.c
docs/: DEPENDENCIES.md
examples/: 02_basic_tools.im  03_llm_client.im  04_web_tools.im  05_file_tools.im  06_json_tools.im  07_string_tools.im  08_prompt_builder.im  09_tool_registry.im  10_agent_loop.im  10_typed_example.im  11_full_integration.im  12_feature_test.im  13_full_demo.im  14_comprehensive_demo.im
fuzz/: FINDINGS.md  README.md  fuzz_bytecode.c  fuzz_json.c  fuzz_lexer.c  fuzz_nanbox.c  fuzz_parser.c  lexer.dict
fuzz/crashes/: crash-3cf23a86f7742f894a189776b830900e7fc73bbc  leak-ffa1781b9307bfa3c48066a3708e6fda3078c949
scripts/: run_examples.sh
src/builtin/: inference.c  inference.h  memory.c  memory.h  tools.c  tools.h
src/debug/: debug.c  health.c  health.h  log.c  log.h  metrics.c  metrics.h  trace.c  trace.h
src/lang/: agim.c  agim.h  ast.c  ast.h  compiler.c  compiler.h  lexer.c  lexer.h  module.c  module.h  parser.c  parser.h  regalloc.c  regalloc.h  regcompiler.c  regcompiler.h  token.h  typechecker.c  typechecker.h
src/net/: cacerts.h  http.c  http.h  http_parser.c  http_parser.h  sse.c  sse.h  tcp.c  tcp.h  tls.c  tls.h  url.c  url.h  websocket.c  websocket.h
src/runtime/: block.c  block.h  capability.c  capability.h  checkpoint.c  checkpoint.h  hotreload.c  mailbox.c  mailbox.h  module.h  procgroup.c  procgroup.h  scheduler.c  scheduler.h  serialize.c  serialize.h  supervisor.c  supervisor.h  telemetry.c  telemetry.h  timer.c  timer.h  worker.c  worker.h
src/types/: array.c  array.h  closure.c  closure.h  map.c  map.h  string.c  string.h  vector.c  vector.h
src/util/: alloc.c  alloc.h  hash.c  hash.h  pool.c  pool.h  worker_alloc.c  worker_alloc.h
src/vm/: bytecode.c  bytecode.h  gc.c  gc.h  ic.c  ic.h  nanbox.h  nanbox_convert.h  primitives.c  primitives.h  regvm.c  regvm.h  sandbox.c  sandbox.h  value.c  value.h  vm.c  vm.h
tests/: test_common.h  tsan.supp
tests/debug/: test_health.c  test_metrics.c
tests/e2e/: test_e2e_checkpoint.c  test_e2e_distributed.c  test_e2e_echo_server.c  test_e2e_hotreload.c  test_e2e_lifecycle.c  test_e2e_messaging.c  test_e2e_pipeline.c  test_e2e_pubsub.c  test_e2e_scheduler.c  test_e2e_state_machine.c  test_e2e_supervision.c  test_e2e_timer.c  test_e2e_worker_pool.c
tests/lang/: test_compiler.c  test_features.c  test_lexer.c  test_parser.c  test_programs.c  test_regcompiler.c  test_typechecker.c  test_typed_programs.c
tests/net/: test_streaming.c  test_tls.c  test_websocket.c
tests/property/: property_test.h  test_array_properties.c  test_gc_properties.c  test_map_properties.c  test_scheduler_properties.c  test_string_properties.c
tests/security/: test_buffer_overflow.c  test_capabilities.c  test_integer_overflow.c  test_security.c  test_use_after_free.c
tests/types/: test_array_operations.c  test_closure_operations.c  test_map_operations.c  test_string_interning.c  test_string_operations.c
tests/vm/: test_block.c  test_block_capabilities.c  test_block_lifecycle.c  test_block_linking.c  test_block_messaging.c  test_block_monitoring.c  test_bytecode.c  test_bytecode_validation.c  test_cow.c  test_file_operations.c  test_gc.c  test_gc_allocation.c  test_gc_comprehensive.c  test_gc_concurrent.c  test_gc_generational.c  test_gc_marking.c  test_gc_sweeping.c  test_ic.c  test_integration.c  test_integration_linking.c  test_integration_monitoring.c  test_mailbox_concurrent.c  test_message.c  test_parallel.c  test_regvm.c  test_scheduler.c  test_scheduler_comprehensive.c  test_scheduler_execution.c  test_scheduler_exit.c  test_scheduler_lifecycle.c  test_scheduler_registry.c  test_scheduler_runqueue.c  test_scheduler_spawn.c  test_timer_wheel.c  test_types.c  test_value.c  test_value_nanbox.c  test_value_refcount.c  test_vm.c  test_vm_arithmetic.c  (+11 more)
(+12 files in other folders)
